--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ html,
 body {
   margin: 0;
   padding: 0;
+  min-height: 100%;
   height: 100vh;
+  min-width: 100%;
   width: 100vw;
   background-color: lightsteelblue;
 }
