--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  min-height: 100%;
   height: 100vh;
-  min-width: 100%;
   width: 100vw;
   background-color: lightsteelblue;
 }
@@ -22,7 +20,7 @@ body {
   padding: 1%;
   grid-gap: 1% 0.5%;
   grid-template-columns: 20% 80%;
-  grid-template-rows: 28% 72%;
+  grid-template-rows: 18% 82%;
   grid-template-areas:
 		"selector title"
 		"selector graphic"
@@ -47,11 +45,25 @@ body {
 .menu{
   background-color: white;
   height: 100%;
+  display: block;
 }
+
+/*checkbox*/
+.input_Xn_div{
+  display: flex; 
+  flex-direction: row;
+}
+
+.checkbox {
+  zoom: 1.5;
+}
+
+/*end check box*/
 
 /*slider's*/
 .slidecontainer {
   width: 100%; /* Width of the outside container */
+  height: 85%;
 }
 
 /* The slider itself */
@@ -79,8 +91,20 @@ body {
   width: 25px;
   height: 25px;
   border-radius: 50%; 
-  background: #4CAF50;
+  background: black;
   cursor: pointer;
+}
+
+#input_Xn1::-webkit-slider-thumb{
+  background: red;
+}
+
+#input_Xn2::-webkit-slider-thumb{
+  background: green;
+}
+
+#input_Xn3::-webkit-slider-thumb{
+  background: blue;
 }
 
 .slider::-moz-range-thumb {
@@ -91,6 +115,7 @@ body {
   cursor: pointer;
 }
 
+/*end menu*/
 
 .chk {
   font-size: 14px;
