--- a/style.css
+++ b/style.css
@@ -9,17 +9,22 @@ body {
 
 /*Grid Item*/
 .title { grid-area: title; }
-.selector { grid-area: selector; }
+.selector { 
+  grid-area: selector;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
 .graphic { grid-area: graphic; }
 
 /* Grid Container*/
 .grid-container {
   display: grid;
-  height: 90%;
+  height: 95%;
   width: 97.5%;
   padding: 1%;
   grid-gap: 1% 0.5%;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 22% 78%;
   grid-template-rows: 18% 82%;
   grid-template-areas:
 		"selector title"
@@ -37,30 +42,78 @@ body {
   text-align: center;
 }
 
-.item.selector{
-  font-weight: bold;
+.item.title p{
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 /*selector menu*/
 .menu{
   background-color: white;
-  height: 100%;
   display: block;
+  flex-grow : 1;
 }
 
 /*checkbox*/
-.input_Xn_div{
+.input_Xn{
   display: flex; 
   flex-direction: row;
 }
 
-.checkbox {
-  zoom: 1.5;
+.input_Xn.first{
+  height: 30px;
+  margin-bottom: 5px;
+  margin-top: 5x;
 }
 
+.input_Xn.first p:first-of-type{
+  font-weight: bold;
+  width: 65px;
+}
+
+#input_a{
+  margin-bottom: 10px;
+}
+
+p{
+  display: block;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.checkbox {
+  zoom: 1.5;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.input_mounting{
+  height: 80%;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+#sub-check{
+  font-size: 10px;
+  width: fit-content;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+#sub-check>*{
+  margin-top: auto;
+  margin-bottom: auto;
+}
 /*end check box*/
 
 /*slider's*/
+.input_Xn.second{
+  height: 30px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
 .slidecontainer {
   width: 100%; /* Width of the outside container */
   height: 85%;
@@ -70,13 +123,15 @@ body {
 .slider {
   -webkit-appearance: none;
   width: 98%;
-  height: 15px;
+  height: 5px;
   border-radius: 5px;  
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
   -webkit-transition: .2s;
   transition: opacity .2s;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 /* Mouse-over effects */
@@ -88,8 +143,8 @@ body {
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%; 
   background: black;
   cursor: pointer;
@@ -113,6 +168,31 @@ body {
   border-radius: 50%;
   background: #4CAF50;
   cursor: pointer;
+}
+
+p.lab{
+  text-align: center;
+}
+
+.width100{
+  display: block;
+  width: 90%;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.selector_name{
+  font-weight: bold;
+}
+
+.line {
+  margin:25px 0;
+  height:2px;
+  background:
+    repeating-linear-gradient(to right,black 0,black 5px,transparent 10px,transparent 7px)
+    /*5px red then 2px transparent -> repeat this!*/
 }
 
 /*end menu*/
