--- a/style.css
+++ b/style.css
@@ -111,10 +111,19 @@ p{
 /*end check box*/
 
 .selector_input{
+  display: flex; 
+  flex-direction: column;
   border-style: solid;
   border-width: 1px;
   border-radius: 5px;
   height: 52px;
+}
+
+.input_Xn{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: auto;
 }
 
 p.lab{
@@ -131,8 +140,6 @@ p.lab{
 .width100{
   display: block;
   width: 90%;
-  margin-bottom: 8px;
-  margin-top: 8px;
   margin-left: auto;
   margin-right: auto;
 }
