--- a/style.css
+++ b/style.css
@@ -156,7 +156,17 @@ p.lab{
   width: 98%;
 }
 
-
+.a_text_input{
+  flex-grow: 1;
+  border-style: solid;
+  border-width: 1px;
+  width: 32px;
+  height: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 3px;
+  margin-right: 3px;
+}
 
 .width100{
   display: block;
