--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
   width: 100%;
   padding: 1%;
   grid-gap: 1% 0.5%;
-  grid-template-columns: minmax(175px, 230px) minmax(310px, 95%);
+  grid-template-columns: minmax(190px, 230px) minmax(405px, 95%);
   grid-template-rows: 50px minmax(100px, calc(100% - 50px));
   grid-template-areas:
     "config title"
@@ -132,7 +132,6 @@ p{
   border-style: solid;
   border-width: 1px;
   border-radius: 5px;
-  height: 33px;
 }
 
 .input_Xn{
@@ -140,6 +139,11 @@ p{
   flex-direction: row;
   flex-wrap: wrap;
   height: auto;
+}
+
+.input_Xn>*{
+  margin-right: auto;
+  margin-left: auto;
 }
 
 #demo_a{
