--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body {
   width: 25px;
   border-style: solid;
   border-width: 2px;
+  margin-right: 4px;
 };
 
 .input_Xn{
@@ -111,6 +112,7 @@ p.lab{
 }
 
 .a_text_input{
+  font-size: 12px;
   flex-grow: 1;
   border-style: solid;
   border-width: 1px;
@@ -216,7 +218,6 @@ p.lab{
     flex-wrap: wrap;
     margin-bottom: 2px;
     margin-top: 2px;
-    margin-right: 4px;
 }
 
 .input_Xn.text{
@@ -336,6 +337,7 @@ label{
     display: inline-block;
     flex-grow: 1;
     height: 100%;
+    margin-right: 4px;
 }
 
 .input_mounting>select{
