--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ p.lab{
 .demo_Xn{
     border-style: solid;
     border-width: 1px;
-    width: 32px;
+    width: 36px;
     height: 20px;
     margin-top: auto;
     margin-bottom: auto;
@@ -324,7 +324,8 @@ label{
 }
 
 .slider_container{
-    flex-grow: 1;
+    display: inline-block;
+    width: 56%;
     height: auto;
 }
 
