slider 4 thumb color corrected

--- a/style.css
+++ b/style.css
@@ -276,6 +276,10 @@ label{
   background: blue;
 }
 
+#Xn4::-webkit-slider-thumb{
+  background: purple;
+}
+
 .slider {
     -webkit-appearance: none;
     width: 94%;
