--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ body {
   width: 100%;
   padding: 1%;
   grid-gap: 1% 0.5%;
-  grid-template-columns: minmax(247px, 247px) minmax(405px, 95%);
+  grid-template-columns: minmax(247px, 247px) 50px minmax(405px, 95%);
   grid-template-rows: 50px minmax(100px, calc(100% - 50px));
   grid-template-areas:
-    "config title"
-		"selector graphic"
+    "config jukebox title"
+		"selector graphic graphic"
     ;
   background-color: lightsteelblue;
 }
