--- a/style.css
+++ b/style.css
@@ -242,6 +242,21 @@ p.lab{
     margin-left: 3px;
 }
 
+.tri_type_P{
+  background-color: gray;
+}
+
+.demo_Pn{
+  background-color: gray;
+  border-style: solid;
+  border-width: 1px;
+  width: 40px;
+  height: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 3px;
+}
+
 p{
     display: block;
     margin-top: auto;
