--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   width: 100%;
   padding: 1%;
   grid-gap: 1% 0.5%;
-  grid-template-columns: minmax(275px, 275px) 130px minmax(405px, 95%);
+  grid-template-columns: minmax(277px, 277px) 130px minmax(405px, 95%);
   grid-template-rows: 50px minmax(100px, calc(100% - 50px));
   grid-template-areas:
     "config jukebox title"
@@ -105,7 +105,7 @@ body {
 .input_Xn{
   margin-left: 0px;
   margin-right: 0px;
-  display: inline-block;
+  display: inline-flex;
   height: auto;
 }
 
@@ -355,10 +355,19 @@ label{
 .plus_minus {
     background: none !important;
     padding: 0px;
+    margin-right: 3px;
     border:none;
     height: 100%;
     width: 10px;
     font-size: 15px;
+}
+
+.plus {
+  margin-left: 3px;
+}
+
+.minus {
+  margin-left: 2px;
 }
 
 .plus_minus:focus,
@@ -367,8 +376,7 @@ label{
 }
 
 .slider_container{
-    display: inline-block;
-    width: 131px;
+    flex-grow: 1;
     height: auto;
 }
 
@@ -378,7 +386,8 @@ label{
 }
 
 .P_input_text{
-  margin: 0px;
+  display: inline-flex;
+  margin-left: 0px;
   margin-right: 4px;
 }
 
@@ -393,8 +402,7 @@ label{
 }
 
 .Bbox{
-    display: inline-block;
-    width: 43px;
-    margin-right: 5px;
-    margin-left: 5px;
+    flex-grow: 1;
+    margin-right: 2px;
+    margin-left: 2px;
 };
