--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 html,
 body {
-  padding: 0px;
+  padding: 2pt;
   margin: 0px;
-  height: 100vh;
-  width: 100vw;
+  height: calc(100vh - 4pt);
+  width: calc(100vw - 2pt);
   min-height: 500px;
   background-color: lightsteelblue;
 }
@@ -38,8 +38,7 @@ body {
   display: grid;
   height: 100%;
   width: 100%;
-  padding: 1%;
-  grid-gap: 0.5% 0.5%;
+  grid-gap: 4pt 4pt;
   grid-template-columns: minmax(282px, 282px) 130px minmax(405px, 95%);
   grid-template-rows: 50px minmax(100px, calc(100% - 50px));
   grid-template-areas:
